feat(shelf): add method for retrieving shelf options by bookcase ID in ShelfService